# colorwizard

./: .env.local.example  .eslintignore  .eslintrc.json  .gitignore  .gitignore.orig  AGENTS.md  AGENT_MISSION.md  CLAUDE.md  CLI_TOOLS_SETUP.md  DELIVERY_SUMMARY.txt  DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  ENV_SETUP_GUIDE.md  HANDOFF.md  MONETIZATION_PROGRESS.md  PACK_FOR_LLM.md  PERFORMANCE-ENGINEER-SUMMARY.md  PERFORMANCE-RESULTS.md  PHASED_RELEASE_PLAN.md  QUICK_REFERENCE.md  README.md  RELEASE_ENGINEERING_INDEX.md  REPO_MAP.md  STRIPE_MIGRATION_COMPLETE.md  TECH_DEBT_NOTES.md  TESTING_GUIDE.md  TEST_PLAN.md  next.config.js  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vitest.config.ts  vitest.setup.ts
.claude/: settings.local.json
app/: error.tsx  globals.css  layout.tsx  not-found.tsx  page.tsx
components/: AISuggestions.tsx  ARCanvas.tsx  AppHeader.tsx  ArtistBadge.tsx  BrandSelector.tsx  CalibrationModal.tsx  CameraView.tsx  CanvasHUD.tsx  CanvasSection.tsx  CanvasSettingsModal.tsx  CardMetadataFields.tsx  CheckMyDrawingCanvas.tsx  CheckMyDrawingView.tsx  CheckMyValuesView.tsx  CollapsibleSidebar.tsx  ColorCardModal.tsx  ColorCardPreview.tsx  ColorDeckPanel.tsx  ColorHarmonies.tsx  ColorNamingDisplay.tsx  ColorPanel.tsx  CompactToolbar.tsx  CurrentColorBadge.tsx  DMCFlossMatch.tsx  DMCSkein.tsx  DebugOverlay.tsx  ErrorBoundary.tsx  FeatureGate.tsx  FullScreenOverlay.tsx  ImageCanvas.tsx  (+43 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  lib.rs  license.rs  license_commands.rs
(+357 files in other folders)
